syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option csharp_namespace = "Grpc.BookingService";

package booking;

service GrpcBookingService {
  rpc BookParkingSlot (BookingRequest) returns (BookingReply){
    option (google.api.http) = {
      post: "/v1/booking",
      body: "*"
    };
  }
  rpc CancelBooking(CancelBookingRequest) returns (CancelBookingReply){
    option (google.api.http) = {
      delete: "/v1/booking/{bookingId}",
    };
  }
  rpc GetActiveBookingsByUser(BookingsByUserRequest) returns (BookingsByUserReply){
    option (google.api.http) = {
      get: "/v1/booking",
    };
  }
}

message BookingRequest {
  string userId = 1;
  google.protobuf.Timestamp startDate = 2;
  google.protobuf.Timestamp endDate = 3;
}

message BookingReply {
  int32 bookingId = 1;
  string parkingSlotName = 2;
}

message CancelBookingRequest {
  int32 bookingId = 1;
}

message CancelBookingReply {
  bool success = 1;
}

message BookingsByUserRequest{
  string userId = 1;
}

message BookingsByUserReply{
  message BookingByUser{
    int32 bookingId = 1;
    string parkingSlotName = 2;
    google.protobuf.Timestamp startDate = 3;
    google.protobuf.Timestamp endDate = 4;
  }

  repeated BookingByUser bookingsByUser = 1;
}
